# claude-monitor

./: .gitignore  README.md  pyproject.toml
src/claude_monitor/: app.py  sessions.py  window_focus.py
