[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-monitor"
version = "0.1.0"
description = "TUI dashboard to monitor and interact with running Claude Code instances"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gustavo von Atzingen", email = "gustavo.von.atzingen@gmail.com" },
]
dependencies = [
    "textual>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
claude-monitor = "claude_monitor.app:main"
cm = "claude_monitor.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_monitor"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
