[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-monitor"
version = "0.1.0"
description = "TUI dashboard to monitor and interact with running Claude Code instances"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gustavo von Atzingen", email = "gustavo.von.atzingen@gmail.com" },
]
keywords = ["claude", "claude-code", "tui", "monitor", "dashboard", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/Atzingen/claude-monitor"
Repository = "https://github.com/Atzingen/claude-monitor"
Issues = "https://github.com/Atzingen/claude-monitor/issues"

[project.scripts]
claude-code-monitor = "claude_monitor.app:main"
cm = "claude_monitor.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_monitor"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md"]
